--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel='stylesheet' href="static/css/style.css">
     <title>Mini JS Project</title>
 </head>
 <body>
-    <h1>Mini JS Title</h1>
+    <div class="container-1">
+        <h2>Challenge 1: Your age in days</h2>
+            <div class="flex-box-container-1">
+            <div>
+                <button class="btn btn-primary">Click Me</button>
+            </div>
+            <div>
+                <button class="btn btn-danger">Reset</button>
+            </div>
+        </div>
+    </div>
+
     <script src="static/js/script.js"></script>
 </body>
 </html>
