--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 <button class="btn btn-danger">Reset</button>
             </div>
         </div>
+
+        <div class="flex-box-container-1">
+            <div id="flex-box-result"></div>
+        </div>
     </div>
 
     <script src="static/js/script.js"></script>
