--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class="container-1">
-        <h2>Challenge 1: Your age in days</h2>
+        <h2>Challenge 1: Your Age in Days</h2>
             <div class="flex-box-container-1">
             <div>
-                <button class="btn btn-primary">Click Me</button>
+                <button class="btn btn-primary" onclick="ageInDays()">Click Me</button>
             </div>
             <div>
-                <button class="btn btn-danger">Reset</button>
+                <button  class="btn btn-danger">Reset</button>
             </div>
         </div>
 
