--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <div class="container-1">
-        <h2>Challenge 1: Your Age in Days</h2>
-            <div class="flex-box-container-1">
-            <div>
-                <button class="btn btn-primary" onclick="ageInDays()">Click Me</button>
-            </div>
-            <div>
-                <button  class="btn btn-danger">Reset</button>
+        <div class="contain">
+            <h2>Challenge 1: Your Age in Days</h2>
+                <div class="flex-box-container-1">
+                <div>
+                    <button class="btn btn-primary" onclick="ageInDays()">Click Me</button>
+                </div>
+                <div>
+                    <button  class="btn btn-danger" onclick="reset()">Reset</button>
+                </div>
             </div>
         </div>
 
