paractice try challenge 2 set up

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-1">
-        <div class="contain">
+        <div class="contain-1">
             <h2>Challenge 1: Your Age in Days</h2>
                 <div class="flex-box-container-1">
                 <div>
@@ -24,6 +24,20 @@
         <div class="flex-box-container-1">
             <div id="flex-box-result"></div>
         </div>
+    </div>
+
+    <div class="container-2">
+        <div class="contain-2"></div>
+            <h2>Challenge 2: Cat Generator</h2>
+                <div class="flex-box-container-2">
+                <div>
+                    <button class="btn btn-success">Generate Cat</button>
+                </div>
+            </div>
+            <div class="flex-box-container-2">
+                <img src="">
+            </div>
+        </div>     
     </div>
 
     <script src="static/js/script.js"></script>
